--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-.vs
-x64
-DllInjector
+# Binaries
+**/bin/
+bin-int/
+Intermediates/
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+**.csproj
